syntax = "proto3";
package pb;
option go_package = "internal/pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message blank{}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserList {
    repeated User users = 1;
}

message GetUserRequest {
    string id = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {}
    // rpc CreateUserStream(stream CreateUserRequest) returns (UserList) {}
    // rpc CreateUserStreamBidirectional(stream CreateUserRequest) returns (stream User) {}
    rpc ListUsers(blank) returns (UserList) {}
    rpc GetUser(GetUserRequest) returns (User) {}
}